ecmascript/parser/tests/test262-error-references/fail/036f6b8da7e53ee5.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/036f6b8da7e53ee5.js:1:3
  |
1 | ({get 
  |   ^^^

